--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prismicio/next": "^1.3.4",
     "@prismicio/react": "^2.7.2",
     "@slicemachine/init": "^2.6.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
