--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@prismicio/client": "^7.2.0",
     "@prismicio/next": "^1.3.4",
     "@prismicio/react": "^2.7.2",
