--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-lottie": "^1.2.8",
     "autoprefixer": "10.4.15",
     "concurrently": "^8.2.1",
     "eslint": "8.48.0",
@@ -29,6 +30,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie": "^1.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
