--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.0.17",
+    "@fontsource/marcellus": "^5.0.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@prismicio/client": "^7.2.0",
